<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill" translatable="false"></string>
    <string name="network_snackbar">This app requires an internet connection</string>
    <string name="message_exist">This stock is already saved !</string>
    <string name="message_invalid">This is not a valid stock</string>

    <string name="detail_symbol">Symbol</string>
    <string name="detail_bid">Bid</string>
    <string name="detail_percent_change">Percent Change</string>
    <string name="detail_change">Change</string>
    <string name="detail_volume">Volume</string>
    <string name="detail_average_volume">Daily Average</string>
    <string name="detail_days_low">Day Low</string>
    <string name="detail_days_high">Day High</string>
    <string name="detail_years_low">Year Low</string>
    <string name="detail_detail_years_high">Year High</string>

    <string name="desc_search">Search for a stock symbol</string>

    <string name="empty_forecast_list">No Stock Information Available</string>

</resources>
