<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginEnd="16dp"
    android:paddingTop="8dp"
    android:layoutDirection="locale"
    android:textDirection="locale"
    app:columnCount="2">

    <LinearLayout
        android:layout_width="match_parent"
        app:layout_columnSpan="2"
        app:layout_rowWeight="10">
        <com.github.mikephil.charting.charts.CandleStickChart
            android:id="@+id/detail_chart_candlestick"
            android:layoutDirection="locale"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/detail_symbol"
        android:textColor="@color/textColorSecondary"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />
    <TextView
        android:id="@+id/detail_symbol"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textSize="22sp"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_gravity="fill_vertical"
        tools:text="ABCD"/>

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/detail_bid"
        android:textColor="@color/textColorSecondary"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />
    <TextView
        android:id="@+id/detail_bid"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textSize="22sp"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_gravity="fill_vertical"
        tools:text="123.45 (USD)"/>

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/detail_percent_change"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textColorSecondary"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />
    <TextView
        android:id="@+id/detail_percent_change"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textSize="22sp"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_gravity="fill_vertical"
        tools:text="- 0.12 %"/>

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/detail_change"
        android:textColor="@color/textColorSecondary"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />
    <TextView
        android:id="@+id/detail_change"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textSize="22sp"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_gravity="fill_vertical"
        tools:text="- 0.34"/>

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/detail_days_low"
        android:textColor="@color/textColorSecondary"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />
    <TextView
        android:id="@+id/detail_days_low"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textSize="22sp"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_gravity="fill_vertical"
        tools:text="123.45 (USD)"/>

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/detail_days_high"
        android:textColor="@color/textColorSecondary"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />
    <TextView
        android:id="@+id/detail_days_high"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textSize="22sp"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_gravity="fill_vertical"
        tools:text="123.45 (USD)"/>

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/detail_years_low"
        android:textColor="@color/textColorSecondary"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />
    <TextView
        android:id="@+id/detail_years_low"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textSize="22sp"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_gravity="fill_vertical"
        tools:text="123.45 (USD)"/>

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/detail_detail_years_high"
        android:textColor="@color/textColorSecondary"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />
    <TextView
        android:id="@+id/detail_years_high"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textSize="22sp"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_gravity="fill_vertical"
        tools:text="123.45 (USD)"/>

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/detail_volume"
        android:textColor="@color/textColorSecondary"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />
    <TextView
        android:id="@+id/detail_volume"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textSize="22sp"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        app:layout_gravity="fill_vertical"
        tools:text="0,123,456,789"/>


</android.support.v7.widget.GridLayout>